--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,11 @@
 <head>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
   <meta charset="utf-8">
-  <title>Movie</title>
+  <title>hdfilmcehennemi |Film izle|</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="https://yt3.ggpht.com/ytc/AKedOLQGyzsiFG7SVxx-FRJHK4ielSMQduwjaMoQsVGO=s900-c-k-c0x00ffffff-no-rj">
 </head>
 <body>
   <app-root></app-root>
