side menu eklendi

--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="https://yt3.ggpht.com/ytc/AKedOLQGyzsiFG7SVxx-FRJHK4ielSMQduwjaMoQsVGO=s900-c-k-c0x00ffffff-no-rj">
+  <link rel="icon" type="image/x-icon" href="https://play-lh.googleusercontent.com/BCjNjmFDVTqSL3pd1fPsjLHBecBHGIRzZPPkjAx7B0YFyV-Xv8qtzfkc_FqQy6ytnOg">
 </head>
 <body>
   <app-root></app-root>
